Add genres into movie details

--- a/feature-details/src/main/res/layout/fragment_details.xml
+++ b/feature-details/src/main/res/layout/fragment_details.xml
@@ -33,6 +33,14 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/genres"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/movie_description" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.core.widget.NestedScrollView>
 
@@ -87,7 +95,7 @@
         app:layout_constraintBottom_toBottomOf="@id/details_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:text="asdaskdhaksasdasd asd asdjdh" />
+        tools:text="Title" />
 
     <ImageView
         android:id="@android:id/home"
