--- a/feature-details/src/main/res/layout/fragment_details.xml
+++ b/feature-details/src/main/res/layout/fragment_details.xml
@@ -23,16 +23,45 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/rating_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:drawableStart="@drawable/ic_star_rating"
+                android:drawablePadding="8dp"
+                android:gravity="center_vertical"
+                android:textColor="@color/orange_peel"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="8.1" />
+
+            <TextView
+                android:id="@+id/rating_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:gravity="center_vertical"
+                android:textColor="#AEAEAE"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                app:layout_constraintBaseline_toBaselineOf="@id/rating_view"
+                app:layout_constraintStart_toEndOf="@id/rating_view"
+                tools:text="(234)" />
+
+            <TextView
                 android:id="@+id/genres_list"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:paddingStart="8dp"
                 android:paddingEnd="8dp"
                 android:textColor="@color/white_80"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@id/rating_view" />
 
             <TextView
                 android:id="@+id/movie_description"
