--- a/feature-details/src/main/res/layout/i_cast.xml
+++ b/feature-details/src/main/res/layout/i_cast.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="80dp"
-    android:layout_height="128dp">
+    android:layout_width="100dp"
+    android:layout_height="180dp">
 
     <ImageView
         android:id="@+id/artist_image"
@@ -18,7 +18,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
+        android:ellipsize="end"
         android:gravity="center"
+        android:maxLines="2"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +33,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:alpha=".8"
+        android:ellipsize="end"
         android:gravity="center"
+        android:maxLines="2"
         android:textColor="@color/white"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
