--- a/feature-details/src/main/res/navigation/details_navigation.xml
+++ b/feature-details/src/main/res/navigation/details_navigation.xml
@@ -2,7 +2,7 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/details_flow"
+    android:id="@id/details_flow"
     app:startDestination="@id/details_fragment">
     <fragment
         android:id="@+id/details_fragment"
@@ -11,16 +11,20 @@
 
         <action
             android:id="@+id/action_artist_details"
-            app:destination="@id/movie_details">
+            app:destination="@id/artist_details"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim">
             <argument
-                android:name="movieId"
-                app:argType="long"
+                android:name="creditId"
+                app:argType="string"
                 app:nullable="false" />
         </action>
     </fragment>
 
     <fragment
         android:id="@+id/artist_details"
-        android:name="com.lebartodev.feature_details.ui.MovieDetailsFragment"
-        tools:layout="@layout/fragment_details" />
+        android:name="com.lebartodev.feature_artist.ui.ArtistDetailsFragment"
+        tools:layout="@layout/fragment_artist_details" />
 </navigation>
