--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -10,4 +10,10 @@
         android:enabled="true"
         android:icon="@drawable/ic_search"
         android:title="@string/menu_search" />
+
+    <item
+        android:id="@id/account_flow"
+        android:enabled="true"
+        android:icon="@drawable/ic_search"
+        android:title="@string/menu_account" />
 </menu>
